fixes flickering on iphone courtesy of https://stackoverflow.com/a/17967969

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body {
     margin: 0;
     padding: 0;
     /*background: black;*/
-    overflow-y: scroll;
+    /*overflow-y: scroll;*/
     --secondary: rgb(161, 161, 161);
     --divider: #343434;
 }
